<resources>
    <string name="app_name">Pokedroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dil">Dil Seçiniz:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kurulum">Kurulum</string>
    <string name="title_activity_oyun">Nasıl Oynanır</string>
    <string name="title_activity_terimler">Terimler Sözlügü</string>
    <string name="title_activity_pokemon_activiy">Pokedex</string>
    <string name="kurulumbir" formatted="false"> Oyunu android işletim sistemli telefonunuza indirmek için APK dosyasını indirmeniz gerekiyor. Bu dosyayı bilgisayarınıza indirerek usb kablosu aracılıgıyla telefonunuza atabilir veya direkt olarak aşagıdaki linklerden telefonunuza indirebilirsiniz. Dosyayı bilgisayara indirmek için APKPure.com gibi bir apk sitesine girip 58.1 MB dosya boyutuna sahip olan Pokemon GO\'nun APK dosyasını bilgisayarınıza indirmeniz gerekli. Sonrasında telefonunuza atarak kullanabilirsiniz. \n\n      \t İki şekilde de dosyayı indirmeden önce telefonunuzun yabancı kaynaklardan yapılan indirmelere açık oldugundan emin olmanız gerekiyor. Bunun için izlemeniz gereken adımlar “Ayarlar” -> “Güvenlik”-> “Bilinmeyen Kaynaklar”. Bilinmeyen kaynakları açtıgınız zaman dosyayı indirebilir ve kullanabilirsiniz. Oyunu kurduktan sonra bu seçenegi kapatmanız bir sorun yaratmaz.  Apk dosyasını indirebileceginiz birden fazla site var. Direkt olarak telefona indirmek için kullanabileceginiz linklerden bazıları:  \n  -https://apkpure.com/pok%C3%A9mon-go/com.nianticlabs.pokemongo\n  -http://www.mediafire.com/download/ic5d4sbdxx3682r/com.nianticlabs.pokemongo_0.29.2.apk\n\n     Not: Pokemon GO Türkiye için resmi olarak hizmete sunulmadıgı için uygulamayı her uygulama gibi Google play store’dan indiremiyoruz. Uygulama yaratıcılarının APK gibi sürümlerin telefona zarar verebilecegi yönündeki uyarılarını aklınızda tutmak isteyebilirsiniz.</string>
    <string name="kurulumiki">  \t\t1)	Ayarlar menüsünden iTunes ve Appstore seçenegine girerek “apple kimligini göster” butonuna basın. \n\n \t\t2)	Karşınıza çıkan Ülke/Bölge(Country/Region) seçeneginden oyunun şu an resmi olarak çıktıgı Avustralya veya Yeni Zelanda gibi ülkelerden birini seçin. \n\n         \t\t3)	Oyunu indirin.</string>
    <string name="oyunbaslikbir">Kaydolma</string>
    <string name="oyunbir">                              \t\t   Oyuna giriş yapabilmek için kayıt oluşturmak gerekmiyor. Pokemon Go konumunuzu Google Maps haritası üzerinden aldığı için herhangi bir Google hesabına sahip olmanız yeterli. Google hesabı ile giriş yaptıktan sonra profesörün kısa bilgilendirmesinin ardından karakter yaratma bölümüne geliniyor. Burada erkek veya kadın seçiminizi yapmanız gerekiyor. Seçiminizi aşağıdaki gibi yaptıktan sonra kıyafet, göz, şapka, çanta ve benzeri dış görünüşünüzü değiştirip hazır hale gelebilirsiniz.</string>
    <string name="oyunbaslikiki">Ana Ekran</string>
    <string name="oyuniki">  \t\t   Ekranın sol altında karakter adınız ve seviyeniz bulunur. üzerine tıkladığınızda sahip olduğunuz XP miktarı, pokecoinleriniz, oyuna başlama tarihiniz, seçtiğiniz takım (Level 5\'den sonra) ve pokemon topladıkça kazandığınız bazı rozetleri görebilirsiniz. orta kısımda menülere açılan poketopu simgesi bulunmaktadır. Bu simgeye tıklayarak pokedex, shop ve pokemona ulaşabilirsiniz. Pokedex, oyundaki pokemonları,  sizin yakaladıklarınızı, özelliklerini ve hangi pokemonla kaç kere karşılaştığınızı gösteirir. Shop, oyunda satın almaları yaptığınız  yerdir. Pokemon kısmı ise yakalanan pokemonların görüldüğü, yumurtaların saklandığı yerdir. Stardustlarınız ile pokemonlarınızı Evolve edebilir, Power Up yapıp geliştirebilir veya profesöre Transfer yapabilirsiniz. Elinizde olan bir pokemondan her yakaladığınızda 100 Stardust kazanırsınız. Bir pokemonu geliştirebilmek için yanında belirtilen miktar kadar Stardust\'a ve pokemon candy\'sine ihtiyaç duyacaksınız. Candy, her pokemon yakaladığınızda veya profesöre transfer ettiğinizde elde edilen şeker miktarıdır. Candy\'ler pokemon yakaladığınızda, elinizde birden fazla olan pokemonlardan birini profesöre gönderdiğinizde (1 adet) veya -genellikle çok miktarda- yumurtalardan çıkan pokemonlardan kazanılır.
                \n\n
    \t\t   Transfer butonu ise elinizdeki pokemondan 1den fazla var ise profesöre bir candy karşılığında transfer etmenizi sağlar. \n\n
    \t\t   Sağ altta ise yakın çevrenizdeki pokemonları görebililirsiniz. pokemonların altında 3 adım varsa size uzak olduğunu, 2 adım varsa yaklaştığınızı, 1 adım varsa çok yakınında olduğunuzu gösterir.
</string>
    <string name="oyunbaslikuc">Takımlar</string>
    <string name="oyunuc"> \t\t   5. levele ulaştıktan sonra takım seçiliyor. Oyunda 3 takım var; sarı, kırmızı ve mavi. \n    \tSarı Takım: Elektiriği çağrıştıran takım iç güdülerine güvenerek asla kaybetmeyeceğini savunuyor. logosu: Zapdos\n    \tMavi Takım: Team Mystic lideri Blanche pokemon evrimi üzerine çalışıyor ve asla kaybetmeyeceklerini söylüyor.  Logosu: Articuno\n    \tKırmızı Takım: Team Valor , Candela asıl önemli olanın eğitim ve mutlak güçten geçtiğini düşünmekte. Logosu: Efsanevi Moltres</string>
    <string name="oyunbaslikdort">Pokemon Yakalama</string>
    <string name="oyundort">\t\t    Haritada kendinizi gördüğünüzde hareket etmeniz gerekiyor (gerçekten yürüyerek). Etrafta bir pokemon belirdiğinde telefon bir titreşim yolluyor. Görmüş olduğunuz pokemonun üzerine tıklamalısınız. \n  Tıkladığınız pokemonu yakalamak iki şekilde gerçekleşiyor. Birincisi kameranız açılıyor ve kameranın gördüğü mesafede pokemon sanki gördüğünüz yerdeymiş gibi görünüyor. Oyunu gerçekçi hale getirse de bu seçenek şarj tüketen bir seçenek.\n   İkinci seçenek için ekranın üstünde yer alan “AR” tuşuna basarak normal moda dönebilirsiniz. Bu moda basarak animasyon üzerinden ilerliyorsunuz. Üstelik eğer hava karanlıksa oyun da gece oluyor, gündüzse güneşli bir şekilde pokemon yakalıyorsunuz.</string>
    <string name="oyunbaslikbes">Yerler</string>
    <string name="oyunbaslikalti">Pokestoplar:</string>
    <string name="oyunbes">\t\t   Pokestoplar, haritada mavi olarak görünen, poke topları ve yumurta alınabilen duraklardır. Aynı pokestopa birden fazla defa gidilebilir ve top ile yumurta toplanabilir.  Pokestoplardan yararlanamayacak kadar uzak olduğunuzda “this pokestop is too far away” uyarısı alırsınız. Pokestoptan yararlanılabilinecek mesafeye gelindiğinde mavi yer işaretinin şekli değişir.</string>
    <string name="oyunbaslikyedi">Gym:</string>
    <string name="oyunalti">\t\t   Gym\'ler savaş alanlarıdır. Level 5 olduktan sonra Mavi (Mystick), Kırmızı (Valor) veya Sarı (Instinct) takımlardan birini seçtiğinizde karşı takımların Gym\'lerine takım arkadaşlarınızla birlikte saldırabilir, savunma ve saldırı stratejileri geliştirebilirsiniz. Kendi takımınızın rengine bürünmüş bir gymi savunmanız, farklı takımların GYM\'lerini ele geçirmeye çalışmanız amaçlanır.</string>
    <string name="oyunyedi"> \t\t   Gym\'i savunmak: Kendi takımınıza ait bir GYM\'e gidin. Eğer gym aktif ise sol altta “+” işareti görünür. Bu durumda gyme girebilirsiniz. Eğer aktif değil ise sağ alt köşede training(eğitim) yapmalısınız.  Gym’i verimli kullanabilmek için gymde bulunan  pokemonların türlerini ve yeteneklerini bilmek gerekir. eğitim yaparken yendiğiniz her pokemondan XP ve GYM Prestige\'i kazanırsınız. Bu hem GYM leveline hem de sizin levelinize katkı sağlar. \n    \t\t     Yüksek prestij puanına sahip olmak GYMin güçlü olduğunu gösterir. Diğer takımların o GYM i ele geçirmesi zorlaşır. Eğitim düşman takımlarla savaşmalarla aynıdır ve Sadece 1 pokemon kullanılabilir.  Unutmayın; pokemonunuz sizin takımınızdan birinin gym\'ini savunurken yaralanabilir. GYM Sizin oyuncu levelınızı yükseltirken, pokemon levelınızı yükseltmeye yardımcı olmaz. \n    \t\t    GYM savunmak Defender bonus denilen bir puan kazandırır. Her 20 saatte bir bu bonusu toplayabilirsiniz. bu bonus; PokeCoins ve Stardust olarak gelir.\n      \t\t      Gym ele geçirmek: Başka takıma ait bir gymi ele geçirmek için meydan okunabilir. GYM Yenmek prestij puanını düşürür. Eğer GYM Prestij puanı yeterince düşerse orayı savunan takımın oyuncusu GYM\'den atılır ve artık o GYM\'de siz hak elde edebilirsiniz. Eğer gym daha önceden hiç sahiplenilmediyse yine aynı şekilde boş gözükür yani direkt savaşmadan alabilirsiniz. \n\n\n\n</string>
    <string name="terimbaslikbir">Achievement(Başarı)</string>
    <string name="terimbir"> \t\tOyunda yerine getirilen görevler sonucunda rozet alırsınız. Bu rozetler profilinizde görünür.</string>
    <string name="terimiki">  \t\tPokemonların yaptığı güçlü saldırı çeşididir. Savaşta yeteri kadar stamina(gücünüz) var ise ekrana basılı tuttuğunuzda aktifleşen saldırı çeşididir.</string>
    <string name="terimuc"> \t\tPokemonun savunma ve saldırı özelliklerini gösteren savaş puanıdır. Pokemonun gücünü gösterir.</string>
    <string name="terimdort">\t\tPokemonun yenilmesi için alması gereken hasar miktarıdır.</string>
    <string name="terimbes"> \t\tSavaş esnasında saldırıdan hasar almadan kurtulmayı ifade eder. </string>
    <string name="terimalti">\t\tPokemonun evrimleşmesidir. evrimleşen pokemon’un CP’si ve istatistikleri artar.</string>
    <string name="terimyedi">\t\tDeneyim puanlarıdır. Yaptığınız aktiviteler sonucu (pokemon yakalamak vs) artar ve seviye atlamanızı sağlar.</string>
    <string name="terimsekiz">\t\tPokemon yakalayabilmek için ihtiyacınız olan eşyalardır. Eğer Poke toplarınız biterse Pokemon yakalayamazsınız.</string>
    <string name="terimdokuz">\t\tEtrafınızdaki yerlerde genellikle merkezi yerlerde (heykel, müze, meydan, camii gibi) oyunu haritasında mavi daire şeklinde görünen duraklardır. Bu duraklar ücretsiz Poke topları, Pokemon yumurtaları ve diğer eşyalar verir.</string>
    <string name="terimon">\t\tPokemon para birimidir.</string>
    <string name="terimonbir"> \t\t5. Seviyeye ulaşıldığında gerçek oyuncularla mücadele etmek için gidilen arenalardır.</string>
    <string name="terimbaslikiki">Pokemon Yumurtaları</string>
    <string name="terimoniki">\t\tPoke Stoplarda bulunan ve içinden pokemon çıkan yumurtalardır. Yumurtalar alındıktan sonra çatlamaları için egg incubatorlara konulup belirli bir mesafe yürümek gerekir.</string>
    <string name="terimonuc">\t\tYakaladığınız, karşılaştığınız pokemonlara ve pokemonların özelliklerine ulaşabileceğiniz yerdir.</string>
    <string name="terimondort">  \t\tPokemon yakaladıkça ya da transfer ettikçe kazanılır. Her Pokemonun, kendi ismine özel Candysi vardır. Pokemonları güçlendirmek ve evrimleştirmek (evolve) için kullanılır.</string>
    <string name="terimonbes">\t\tPokemon yakaladıkça ya da transfer ettikçe kazanırsınız. Stardust tüm pokemonlar için ortaktır.</string>
    <string name="terimonalti">\t\tGymlerde savaşan ve yaralanan Pokemonları iyileştirir. 3 türü vardır: Normal Potion 20 HP iyileştirir, Super Potion 50 HP iyileştirir, Hyper Potion 200 HP iyileştirir.</string>
    <string name="terimonyedi">\t\tSavaşlarda rakip takım tarafından baygın düşürülmüş Pokemonları canlandırır. Poke Stoplarda bulunur.</string>
    <string name="terimonsekiz">\t\tEtrafta Pokemon bulma olasılığınızı arttırır. PokeCoinlerle satın alınabilir.</string>
    <string name="terimondokuz">    \t\tZor yakalanan bir pokemonu yakalama şansını arttıran meyvelerdir. </string>
    <string name="terimyirmi"> \t\tPokemon yumurtalarını koyup, siz yürüdükçe onların kırılmaya hazır hale gelmesini sağlayan eşyalardır. Aynı anda sadece 1 yumurta üzerinde kullanabilir, sınırsız sayıda kullanabilirsiniz. Seviye atladıkça 3 kullanımlık Egg Incubatorlar ile aynı anda birkaç yumurta açabilirsiniz. Oyuna 1 taneyle başlanır.\n\n\n\n</string>
</resources>