<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mert.pokemongoelkitabi.mert.pokemongoelkitabi.Terimler"
    tools:showIn="@layout/app_bar_terimler"
    android:background="@drawable/side_nav_bar"
    >

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/terimbaslikbir"
            android:id="@+id/textView16"
            android:textColor="#660033"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimbir"
            android:id="@+id/textView17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Charged move"
            android:textColor="#660033"
            android:id="@+id/textView18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimiki"
            android:id="@+id/textView19" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="CP(Combat Point)"
            android:id="@+id/textView20"
            android:textColor="#660033"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimuc"
            android:id="@+id/textView21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="HP"
            android:textColor="#660033"
            android:id="@+id/textView22" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimdort"
            android:id="@+id/textView23" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Dodge"
            android:id="@+id/textView24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimbes"
            android:id="@+id/textView25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Evolution"
            android:id="@+id/textView26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimalti"
            android:id="@+id/textView27" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Experience Point(xp)"
            android:id="@+id/textView28" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimyedi"
            android:id="@+id/textView29" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Pokeball"
            android:id="@+id/textView30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimsekiz"
            android:id="@+id/textView31" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Poke Stop"
            android:id="@+id/textView32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimdokuz"
            android:id="@+id/textView33" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Poke Coin"
            android:id="@+id/textView34" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#660033"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimon"
            android:id="@+id/textView35" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Pokemon Gym"
            android:id="@+id/textView36" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#660033"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimonbir"
            android:id="@+id/textView37" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="@string/terimbaslikiki"
            android:id="@+id/textView38" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#660033"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimoniki"
            android:id="@+id/textView39" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Pokedex"
            android:id="@+id/textView40" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#660033"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimonuc"
            android:id="@+id/textView41" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Pokemon Candy"
            android:id="@+id/textView42" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimondort"
            android:id="@+id/textView43" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Stardust"
            android:id="@+id/textView44" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimonbes"
            android:id="@+id/textView45" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Potion"
            android:id="@+id/textView46" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#660033"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimonalti"
            android:id="@+id/textView47" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Revive"
            android:id="@+id/textView48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimonyedi"
            android:id="@+id/textView49" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Incense"
            android:id="@+id/textView50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimonsekiz"
            android:id="@+id/textView51" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Razz Berry"
            android:id="@+id/textView52" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#660033"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimondokuz"
            android:id="@+id/textView53" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#660033"
            android:text="Egg Incubator"
            android:id="@+id/textView54" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#660033"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/terimyirmi"
            android:id="@+id/textView55" />
    </LinearLayout>

</ScrollView>


    <com.google.android.gms.ads.AdView android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        ads:adUnitId="ca-app-pub-5677978125129640/7501373011"
        ads:adSize="BANNER"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
